# clap-jules

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clap-info  my_plugin.cpp  my_plugin.h  my_plugin_gui.cpp  my_plugin_gui.h  plugin_gui.cpp  plugin_gui.h
.github/: copilot-instructions.md
.github/workflows/: build.yml  build_and_test.yml  copilot-setup-steps.yml  main.yml
backends/imgui_skia/: imgui_impl_skia.cpp  imgui_impl_skia.h
test/: clap_plugin_test.cpp  test_imgui_integration.cpp  test_my_plugin.cpp
test_build/: my_plugin_tests[1]_include.cmake
test_build/clap/: clap.pc
